--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipeListActivity">
+        <activity android:name=".ui.RecipeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecipeStepListActivity" />
-        <activity android:name=".RecipeStepDetailActivity" />
+        <activity android:name=".ui.RecipeStepListActivity" />
+        <activity android:name=".ui.RecipeStepDetailActivity" />
 
-        <receiver android:name=".YummlyWidgetProvider">
+        <receiver android:name=".widget.YummlyWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -30,7 +30,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/yummly_widget_info" />
         </receiver>
-        <service android:name=".YummlyRemoteViewsService"
+        <service android:name=".widget.YummlyRemoteViewsService"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
